# GK3D

./: CMakeLists.txt  README.md
inc/: tiny_obj_loader.h
inc/GL/: freeglut_ext.h  freeglut_std.h  gl.h  gl_mangle.h  glcorearb.h  glu.h  glx.h  glx_mangle.h  glxext.h  glxint.h  glxproto.h  glxtokens.h
inc/GL/internal/: dri_interface.h  glcore.h
inc/GLFW/: glfw3.h
inc/glad/: glad.h
inc/glm/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  common.hpp  ext.hpp  fwd.hpp
inc/glm/detail/: _swizzle.hpp  _vectorize.hpp  func_common.inl  func_common_simd.inl  func_exponential.inl  func_exponential_simd.inl  func_geometric.inl  func_geometric_simd.inl  func_integer.inl  func_integer_simd.inl  func_matrix.inl  func_matrix_simd.inl  func_packing.inl  func_trigonometric.inl  func_vector_relational.inl  glm.cpp  qualifier.hpp  setup.hpp  type_mat4x4.inl  type_quat.hpp  type_quat.inl  type_vec1.hpp  type_vec2.hpp  type_vec3.hpp  (+3 more)
src/: glad.c  main.cpp
src/objects/: Camera.cpp  Camera.h  Entity.h  Light.h  Player.cpp  Player.h  Terrain.cpp  Terrain.h
src/renderers/: EntityRenderer.cpp  EntityRenderer.h  SkyboxRenderer.cpp  SkyboxRenderer.h  TerrainRenderer.cpp  TerrainRenderer.h
src/shaders/: EntityShader.cpp  EntityShader.h  SkyboxShader.h  TerrainShader.cpp  TerrainShader.h  entity_gouraud.fs  entity_gouraud.vs  entity_phong.fs  entity_phong.vs  skybox.fs  skybox.vs  terrain.fs  terrain.vs
src/utils/: FrameBuffer.cpp  FrameBuffer.h  GameTime.h  InputState.h  Loader.cpp  Loader.h  Model.cpp  Model.h  ShaderProgram.cpp  ShaderProgram.h
(+106 files in other folders)
